Adicionado o caminho da foto na tabela de serviço.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,10 +47,10 @@ services:
                 - '12345678'
             retries: 3
             timeout: 5s
-        minio:
-            image: 'minio:RELEASE.2025-05-24T17-08-30Z'
-            ports:
-                - ''
+        # minio:
+        #     image: 'minio:RELEASE.2025-05-24T17-08-30Z'
+        #     ports:
+        #         - ''
 networks:
     sail:
         driver: bridge
