feat(auth): Implementa fluxo de cadastro de usuário com Arquitetura Limpa
Desenvolve a funcionalidade de cadastro de ponta a ponta, incluindo:
- Estrutura de pastas para Domínio e Infraestrutura.
- UseCase para orquestrar cadastro.
- Repository para abstração do banco de dados.
- Validar domínio para regras de negócio.
- Configuração do Controller, Rotas e View Blade para o formulário.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
                 WWWGROUP: 1000
                 MYSQL_CLIENT: mysql-client
                 POSTGRES_VERSION: 16
+                PHP_EXTENSIONS: pdo_mysql # Adiciona a extensão PHP necessária para o MySQL
         image: sail-8.4/app
         ports:
             - '1234:80'
