--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^12.0",
         "laravel/sail": "^1.43",
         "laravel/tinker": "^2.10.1",
-        "laravel/ui": "^4.6"
+        "laravel/ui": "^4.6",
+        "league/flysystem-aws-s3-v3": "^3.29"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
