--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,18 @@
 services:
-    servinow-sys:
+    laravel.test:
         build:
-            context: ./vendor/laravel/sail/runtimes/8.4
+            context: './vendor/laravel/sail/runtimes/8.4'
             dockerfile: Dockerfile
             args:
-                WWWGROUP: 1000
-                MYSQL_CLIENT: mysql-client
-                POSTGRES_VERSION: 16
-                PHP_EXTENSIONS: pdo_mysql # Adiciona a extensão PHP necessária para o MySQL
-        image: sail-8.4/app
+                WWWGROUP: '${WWWGROUP}'
+        image: 'sail-8.4/app'
+        extra_hosts:
+            - 'host.docker.internal:host-gateway'
         ports:
-            - '1234:80'
+            - '${APP_PORT:-80}:80'
+            - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
         environment:
-            WWWUSER: sail
+            WWWUSER: '${WWWUSER}'
             LARAVEL_SAIL: 1
             XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
             XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
@@ -23,18 +23,18 @@ services:
             - sail
         depends_on:
             - mysql
+            - minio
     mysql:
         image: 'mysql/mysql-server:8.0'
         ports:
-            - '3306:3306'
+            - '${FORWARD_DB_PORT:-3306}:3306'
         environment:
-            MYSQL_ROOT_PASSWORD: '12345678'
+            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
             MYSQL_ROOT_HOST: '%'
-            MYSQL_DATABASE: banco
-            MYSQL_USER: sail
-            MYSQL_PASSWORD: '12345678'
+            MYSQL_DATABASE: '${DB_DATABASE}'
+            MYSQL_USER: '${DB_USERNAME}'
+            MYSQL_PASSWORD: '${DB_PASSWORD}'
             MYSQL_ALLOW_EMPTY_PASSWORD: 1
-            command: "/bin/sh -c \" mysqld --skip-name-resolve=0 & sleep 10; mysql -u root -p12345678 -e \\\" CREATE USER IF NOT EXISTS 'sail'@'%' IDENTIFIED BY '12345678'; GRANT ALL PRIVILEGES ON banco.* TO 'sail'@'%'; FLUSH PRIVILEGES; \\\"; tail -f /dev/null \"\n"
         volumes:
             - 'sail-mysql:/var/lib/mysql'
             - './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
@@ -45,40 +45,35 @@ services:
                 - CMD
                 - mysqladmin
                 - ping
-                - '12345678'
+                - '-p${DB_PASSWORD}'
             retries: 3
             timeout: 5s
-
     minio:
-        image: 'minio/minio:RELEASE.2025-05-24T17-08-30Z'
+        image: 'minio/minio:latest'
         ports:
-            - '9000:9000'
-            - '9001:9001'
+            - '${FORWARD_MINIO_PORT:-9000}:9000'
+            - '${FORWARD_MINIO_CONSOLE_PORT:-8900}:8900'
         environment:
-            MINIO_ROOT_USER: root
-            MINIO_ROOT_PASSWORD: 12345678
+            MINIO_ROOT_USER: sail
+            MINIO_ROOT_PASSWORD: password
         volumes:
-            - minio-data:/data
-        command: server /data --console-address ":9001"
+            - 'sail-minio:/data'
         networks:
             - sail
-    mc:
-        image: minio/mc
-        depends_on:
-            - minio
-        entrypoint: >
-            /bin/sh -c "
-                sleep 3;
-                mc alias set local http://minio:9000 root 12345678 &&
-                mc mb --ignore-existing local/servinow-data
-            "
-        networks:
-            - sail
+        command: 'minio server /data --console-address ":8900"'
+        healthcheck:
+            test:
+                - CMD
+                - mc
+                - ready
+                - local
+            retries: 3
+            timeout: 5s
 networks:
     sail:
         driver: bridge
 volumes:
     sail-mysql:
         driver: local
-    minio-data:
+    sail-minio:
         driver: local
